package jp.tkugimot.gofdesignpatternjava.iterator;

public interface Aggregate {
    public abstract Iterator iterator();
}
