package jp.tkugimot.gofdesignpatternjava.iterator;

public interface Iterator {
    public boolean hasNext();
    public Object next();
}
